--- a/style.css
+++ b/style.css
@@ -24,9 +24,10 @@ body{
 }
 .header_menu left{
     display: flex;
-    width: 5%;
+    width: 10%;
     height: auto;
-    justify-content: start;
+    font-weight: 600;
+    justify-content: center;
     align-items: center;
 }
 .header_menu right{
@@ -35,6 +36,7 @@ body{
     height: auto;
     justify-content: end;
     align-items: center;
+    font-weight: 500;
     margin-right: 2%;
 }
 .header_menu ul{
@@ -50,7 +52,6 @@ body{
     padding:0;
     list-style: none;
     flex-direction: row;
-    font-weight: 500;
     font-size: 1.3rem;
     text-decoration: none;
     color: #ffffff;
@@ -316,6 +317,7 @@ body{
     flex-direction: center;
     align-items: start;
     min-height: 100px;
+    align-items: center;
 }
 .projets titre{
     margin: 15px 3%;
@@ -329,6 +331,7 @@ body{
     font-size: 1.3rem;
     font-weight: 500;
     margin: 0;
+    margin-right: 8px;
     width: 30%;
 }
 .projets h3{
